tests/errors/bundle-delay.expect
---STDERR---
error: bundle's availability is greater than the delay of the event
  ┌─ tests/errors/bundle-delay.fil:2:20
  │
1 │ comp Bar[#P, #K]<G:1>(
  │                    - event's delay
2 │    in[#K]: for<#j> @[G+#j, G+#K] 16,
  │                 -  ^^^^^^^^^^^^^ available for #K-#j
  │                 │   
  │                 takes values in [0, #K)
  │
  = Cannot prove constraint: 1 >= #K-#j
  = Counterexample: #K = 2, #j = 0

error: interval's end must be strictly greater than the start
  ┌─ tests/errors/bundle-delay.fil:6:29
  │
6 │     bundle f[#P+1]: for<#k> @[G+#k, G+#P] 16;
  │                             ^^^^^^^^^^^^^ interval's end `G+#P' is not strictly greater than the start `G+#k
  │
  = Cannot prove constraint: #P > #k
  = Counterexample: #P = 0, #k = 0

error: bundle's availability is greater than the delay of the event
  ┌─ tests/errors/bundle-delay.fil:6:29
  │
1 │ comp Bar[#P, #K]<G:1>(
  │                    - event's delay
  ·
6 │     bundle f[#P+1]: for<#k> @[G+#k, G+#P] 16;
  │                          -  ^^^^^^^^^^^^^ available for #P-#k
  │                          │   
  │                          takes values in [0, 1+#P)
  │
  = Cannot prove constraint: 1 >= #P-#k
  = Counterexample: #P = 2, #k = 0

Compilation failed with 3 errors
